click event demonstration, wrapping function to invoke correctly

--- a/NinjaReactProject/SimpleProjectTwo/my-app/src/index.css
+++ b/NinjaReactProject/SimpleProjectTwo/my-app/src/index.css
@@ -1,13 +1,37 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* base styles */
+
+/* targeting every element with >*< */
+* {
+  margin: 0;
+  font-family: "Quicksand";
+  color: #333;
+}
+.navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center; /* verticaly not horizontally */
+  max-width: 600px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+.navbar h1 {
+  color: #d61952;
+}
+.navbar .links {
+  margin-left: auto; /* places link to the right as parent nav is displayed as flex */
+}
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover {
+  color: #d61952;
+}
+.content { 
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
 }
